fix: match the fork list against the loop-suffixed reference name
The untagged-server fallback compared a task's reference name to the fork
list verbatim, and the two never agree for a real agent. Conductor records
forkedTasks when it maps the FORK_JOIN_DYNAMIC, before the enclosing DO_WHILE
appends __<iteration> to each task it schedules, so the list holds
toolu_ab_0 while the tool task is toolu_ab_0__1. Every tool call inside the
ReAct loop failed the lookup, which is all of them.

Verified against a live server: a dynamic fork inside a DO_WHILE records
forkedTasks ["toolu_99_0"] and schedules toolu_99_0__1.

The three earlier tests agreed with the defect because their fork lists
carried the iteration suffix, which the server never does.

- normalize both sides on the __<iteration> suffix, matched only at the end
  of the name rather than TaskUtils' split on the first "__"
- fix the fixtures to record fork lists as the server does, and cover a call
  forked inside the loop
- share one internal-key predicate with AgentEvent so both paths strip the
  same set structurally, rather than by a test asserting they agree
- name the tool-call and tool-result event builders
- warn rather than debug when the task walk fails, since the empty result it
  leaves is indistinguishable from a run that used no tools